# purdungeon

./: .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  oui.rs  types.rs
crates/core/src/analysis/: findings.rs  mod.rs  ports.rs  roles.rs
crates/core/src/ingest/: pcap.rs
crates/core/src/protocols/: modbus.rs
crates/core/src/store/: mod.rs  modbus.rs  queries.rs  schema.rs
crates/core/tests/: import.rs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: import.rs  query.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/parser/: pcap.rs
src/canvas/: CanvasEdge.ts  CanvasLink.ts  CanvasNode.ts  palette.ts
src/components/: AppHeader.vue  EdgeDetailPanel.vue  FileDropZone.vue  FilterBar.vue  FindingsPanel.vue  LevelLegend.vue  LinkDetailPanel.vue  LoadingOverlay.vue  NodeDetailPanel.vue  SearchBar.vue  TimelineBar.vue  TopologyCanvas.vue
src/composables/: useCanvas.ts  useTauri.ts
src/stores/: app.ts  topology.ts
src/types/: canvas.ts  network.ts
src/utils/: format.ts  search.ts
